Include events rbac

--- a/charts/unbind/templates/sa.yaml
+++ b/charts/unbind/templates/sa.yaml
@@ -114,6 +114,9 @@ rules:
   - apiGroups: ["longhorn.io"]
     resources: ["volumes", "volumeattachments", "engines", "replicas", "settings", "nodes"]
     verbs: ["get", "list", "watch"]
+  - apiGroups: ["events.k8s.io"]
+    resources: ["events"]
+    verbs: ["get", "list", "watch"]    
 ---
 # NEW: ClusterRole for resource management permissions
 apiVersion: rbac.authorization.k8s.io/v1
