--- a/charts/unbind-operator/templates/rbac/role.yaml
+++ b/charts/unbind-operator/templates/rbac/role.yaml
@@ -76,6 +76,18 @@ rules:
   - patch
   - update
 - apiGroups:
+  - clickhouse.altinity.com
+  resources:
+  - clickhouseinstallations
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - helm.toolkit.fluxcd.io
   resources:
   - helmreleases
