--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -211,7 +211,8 @@ releases:
           pattern_ingester:
             enabled: true
           limits_config:
-            max_concurrent_tail_requests: 100
+            # Reduce concurrent tail requests to save memory
+            max_concurrent_tail_requests: 50
             allow_structured_metadata: true
             volume_enabled: true
             retention_period: {{ .Values | get "overrides.loki.retentionPeriod" }}
@@ -241,7 +242,7 @@ releases:
           resources:
             requests:
               cpu: 10m
-              memory: 10Mi
+              memory: 32Mi
 
         deploymentMode: SingleBinary
         singleBinary:
