--- a/values/kube-prometheus-stack.yaml
+++ b/values/kube-prometheus-stack.yaml
@@ -1,11 +1,11 @@
 # Optimized kube-prometheus-stack values for your specific queries
 prometheus:
   prometheusSpec:
-    # Longer scrape intervals to reduce load
+    # Reduce scrape frequency to save resources
     scrapeInterval: 30s
     evaluationInterval: 60s
     
-    # Optimized resources
+    # Constrained memory limits
     resources:
       requests:
         cpu: 10m
@@ -14,85 +14,57 @@ prometheus:
         cpu: 200m
         memory: 512Mi
     
-    # Disable un-needed features
+    # Turn off unnecessary features
     enableAdminAPI: false
     enableRemoteWriteReceiver: false
     walCompression: true
 
-# Disable all default alerting rules
+# No alerting rules needed
 defaultRules:
   create: false
 
-# Keep kubelet but optimize it heavily
+# Kubelet monitoring for container and volume metrics
 kubelet:
   enabled: true
   serviceMonitor:
-    # Enable kubelet metrics for volume stats
-    kubelet: true   # Keep kubelet metrics
-    probes: false   # Disable probes metrics
-    resource: false # Disable resource metrics
-    cAdvisor: true  # Keep container metrics
+    # Need kubelet endpoint for volume stats
+    kubelet: true   
+    probes: false   
+    resource: false 
+    cAdvisor: true  
     
-    # Filter kubelet metrics to only volume stats
+    # Only collect volume usage metrics from kubelet
     metricRelabelings:
       - sourceLabels: [__name__]
         action: keep
         regex: 'kubelet_volume_stats_used_bytes'
     
-    # Aggressively filter cAdvisor metrics
+    # Keep essential container metrics only
     cAdvisorMetricRelabelings:
-      # Keep used metrics
+      # Keep the metrics you actually use
       - sourceLabels: [__name__]
         action: keep
         regex: 'container_(cpu_usage_seconds_total|memory_working_set_bytes|network_receive_bytes_total|network_transmit_bytes_total)'
       
-      # Drop metrics for system container
+      # Drop system containers but keep the empty container filter less strict
       - sourceLabels: [container]
         action: drop
-        regex: 'POD|'
-      
-      # Drop high-cardinality labels
-      - sourceLabels: [id]
-        action: labeldrop
-        regex: '.*'
-      
-      # Keep essential labels
-      - action: labelkeep
-        regex: '__name__|job|instance|namespace|pod|container|interface'
+        regex: '^$|POD'
 
 kube-state-metrics:
-  # Only collect pod and persistentvolumeclaims metrics
+  # Keep your original working config
   extraArgs:
-    - --resources=pods,persistentvolumeclaims
-    - --metric-labels-allowlist=pods=[unbind_team,unbind_project,unbind_environment,unbind_service]
-  
-  prometheus:
-    monitor:
-      # Filter to only essential kube-state-metrics
-      metricRelabelings:
-        - sourceLabels: [__name__]
-          action: keep
-          regex: 'kube_pod_(labels|spec_volumes_persistentvolumeclaims_info)'
+  - --metric-labels-allowlist=pods=[*]
 
-# Optimize node-exporter for your node queries
+# Node exporter with minimal filtering
 prometheus-node-exporter:
-  # Only enable needed collectors
+  # Disable only the most expensive collectors
   extraArgs:
-    - --collector.cpu
-    - --collector.meminfo  
-    - --collector.netdev
-    - --collector.diskstats
-    - --collector.filesystem
-    - --collector.loadavg
-    - --collector.uname
-    # Disable un-needed collectors
     - --no-collector.wifi
     - --no-collector.hwmon
     - --no-collector.powersupplyclass
     - --no-collector.rapl
     - --no-collector.thermal_zone
-    - --no-collector.time
-    - --no-collector.timex
     - --no-collector.arp
     - --no-collector.conntrack
     - --no-collector.sockstat
@@ -103,15 +75,8 @@ prometheus-node-exporter:
     - --no-collector.processes
     - --collector.filesystem.mount-points-exclude=^/(dev|proc|sys|var/lib/docker/.+|var/lib/kubelet/.+)($|/)
     - --collector.filesystem.fs-types-exclude=^(autofs|binfmt_misc|bpf|cgroup2?|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|iso9660|mqueue|nsfs|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|selinuxfs|squashfs|sysfs|tracefs)$
-  
-  prometheus:
-    monitor:
-      metricRelabelings:
-        - sourceLabels: [__name__]
-          action: keep
-          regex: 'node_(cpu_seconds_total|memory_MemTotal_bytes|memory_MemAvailable_bytes|network_receive_bytes_total|network_transmit_bytes_total|disk_read_bytes_total|disk_written_bytes_total|filesystem_size_bytes|filesystem_free_bytes|load1|uname_info)'
 
-# Set limits
+# Resource limits for operator
 prometheusOperator:
   resources:
     limits:
@@ -121,7 +86,7 @@ prometheusOperator:
       cpu: 50m
       memory: 64Mi
 
-# Disable all un-needed components
+# Disable unused components
 grafana:
   enabled: false
 alertmanager:
@@ -142,7 +107,5 @@ kubeDns:
   enabled: false
 windowsMonitoring:
   enabled: false
-
-# Disable unnecessary monitoring
 kubernetesServiceMonitors:
   enabled: false
