--- a/values/kube-prometheus-stack.yaml
+++ b/values/kube-prometheus-stack.yaml
@@ -1,96 +1,35 @@
-# Optimized kube-prometheus-stack values for your specific queries
+# Static values for kube-prometheus-stack chart
 prometheus:
   prometheusSpec:
-    # Reduce scrape frequency to save resources
-    scrapeInterval: 30s
-    evaluationInterval: 60s
-    
-    # Constrained memory limits
     resources:
       requests:
         cpu: 10m
         memory: 128Mi
       limits:
         cpu: 200m
-        memory: 512Mi
-    
-    # Turn off unnecessary features
-    enableAdminAPI: false
-    enableRemoteWriteReceiver: false
-    walCompression: true
-
-# No alerting rules needed
-defaultRules:
-  create: false
-
-# Kubelet monitoring for container and volume metrics
-kubelet:
-  enabled: true
-  serviceMonitor:
-    # Need kubelet endpoint for volume stats
-    kubelet: true   
-    probes: false   
-    resource: false 
-    cAdvisor: true  
-    
-    # Only collect volume usage metrics from kubelet
-    metricRelabelings:
-      - sourceLabels: [__name__]
-        action: keep
-        regex: 'kubelet_volume_stats_used_bytes'
-    
-    # Keep essential container metrics only
-    cAdvisorMetricRelabelings:
-      # Keep the metrics you actually use
-      - sourceLabels: [__name__]
-        action: keep
-        regex: 'container_(cpu_usage_seconds_total|memory_working_set_bytes|network_receive_bytes_total|network_transmit_bytes_total)'
-      
-      # Drop system containers but keep the empty container filter less strict
-      - sourceLabels: [container]
-        action: drop
-        regex: '^$|POD'
+        memory: 1Gi
 
 kube-state-metrics:
-  # Keep your original working config
   extraArgs:
   - --metric-labels-allowlist=pods=[*]
 
-# Node exporter with minimal filtering
-prometheus-node-exporter:
-  # Disable only the most expensive collectors
-  extraArgs:
-    - --no-collector.wifi
-    - --no-collector.hwmon
-    - --no-collector.powersupplyclass
-    - --no-collector.rapl
-    - --no-collector.thermal_zone
-    - --no-collector.arp
-    - --no-collector.conntrack
-    - --no-collector.sockstat
-    - --no-collector.netstat
-    - --no-collector.nfs
-    - --no-collector.nfsd
-    - --no-collector.pressure
-    - --no-collector.processes
-    - --collector.filesystem.mount-points-exclude=^/(dev|proc|sys|var/lib/docker/.+|var/lib/kubelet/.+)($|/)
-    - --collector.filesystem.fs-types-exclude=^(autofs|binfmt_misc|bpf|cgroup2?|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|iso9660|mqueue|nsfs|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|selinuxfs|squashfs|sysfs|tracefs)$
-
-# Resource limits for operator
-prometheusOperator:
-  resources:
-    limits:
-      cpu: 100m
-      memory: 384Mi
-    requests:
-      cpu: 50m
-      memory: 64Mi
-
-# Disable unused components
+# Disable non-essential components
 grafana:
   enabled: false
 alertmanager:
   enabled: false
+kubeStateMetrics:
+  enabled: true  # Enabled for pod metrics
+nodeExporter:
+  enabled: true  # Enabled for node metrics
+prometheusOperator:
+  resources:
+    limits:
+      cpu: 100m
+      memory: 512Mi
+    requests:
+      cpu: 50m
+      memory: 64Mi
 kubeEtcd:
   enabled: false
 kubeScheduler:
@@ -104,8 +43,4 @@ kubeApiServer:
 coreDns:
   enabled: false
 kubeDns:
-  enabled: false
-windowsMonitoring:
-  enabled: false
-kubernetesServiceMonitors:
   enabled: false
