--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -15,6 +15,8 @@ repositories:
     url: https://charts.bitnami.com/bitnami
   - name: fluxcd-community
     url: https://fluxcd-community.github.io/helm-charts
+  - name: vm
+    url: https://victoriametrics.github.io/helm-charts/
 
 values:
  - unbindDomain: unbind.example.com
@@ -74,36 +76,23 @@ releases:
       component: flux
     installed: true
 
-  - name: kube-prometheus-stack
+  - name: victoria-metrics-k8s-stack
     namespace: {{ .Values.namespace }}
-    chart: prometheus-community/kube-prometheus-stack
-    version: 72.6.3
-    hooks:
-      - events: ["presync"]
-        showlogs: true
-        command: "/bin/sh"
-        args:
-          - "-c"
-          - |
-            echo "Installing Prometheus Operator CRDs..."
-            for CRD in alertmanagerconfigs alertmanagers podmonitors probes prometheuses prometheusrules servicemonitors thanosrulers; do
-              kubectl apply -f https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.60.0/example/prometheus-operator-crd/monitoring.coreos.com_${CRD}.yaml
-            done
-            echo "Prometheus Operator CRDs installed"
+    chart: vm/victoria-metrics-k8s-stack
+    version: 0.50.1
     values:
-      - values/kube-prometheus-stack.yaml
-      - prometheus:
-          prometheusSpec:
-            retention: {{ .Values | get "overrides.kubePrometheusStack.retention" }}
-            storageSpec:
-              volumeClaimTemplate:
-                spec:
-                  resources:
-                    requests:
-                      storage: {{ .Values | get "overrides.kubePrometheusStack.storage" }}
+      - values/victoria-metrics-k8s-stack.yaml
+      - vmsingle:
+          spec:
+            retentionPeriod: {{ .Values | get "overrides.victoriaMetricsStack.retention" }}
+            storage:
+              accessModes: ["ReadWriteOnce"]
+              resources:
+                requests:
+                  storage: {{ .Values | get "overrides.victoriaMetricsStack.storage" }}
     labels:
       component: monitoring
-    installed: {{ .Values | get "components.kubePrometheusStack.enabled" true }}
+    installed: {{ .Values | get "components.victoriaMetricsStack.enabled" true }}
 
   - name: alloy
     namespace: {{ .Values.namespace }}
@@ -1132,7 +1121,7 @@ releases:
             - name: LOKI_ENDPOINT
               value: {{ .Values | get "overrides.unbind.api.loki.endpoint" (printf "http://loki-gateway.%s.svc.cluster.local" .Values.namespace) }}
             - name: PROMETHEUS_ENDPOINT
-              value: {{ .Values | get "overrides.unbind.api.prometheus.endpoint" (printf "http://kube-prometheus-stack-prometheus.%s:9090" .Values.namespace) }}
+              value: {{ .Values | get "overrides.unbind.api.prometheus.endpoint" (printf "http://vmsingle-victoria-metrics-k8s-stack.%s:8429" .Values.namespace) }}
 
       - auth:
           enabled: true
